<resources>
    <string name="app_name">PROJEKT</string>
    <string name="title_home">Strona główna</string>
    <string name="title_daily_steps">Kroki</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_calendar">Treningi</string>

    <string name="daily_steps">Dziś zrobiłeś tyle kroków:</string>
    <string name="monthly_steps">W tym miesiącu zrobiłeś tyle kroków:</string>
    <string name="label_wname">Nazwa ćwiczenia: </string>
    <string name="label_wreps">Ilość powtórzeń: </string>
    <string name="label_wseries">Ilość serii: </string>
    <string name="save_button">Zapisz</string>
    <string name="w_name">Nazwa ćwiczenia: </string>
    <string name="w_reps">Powtórzenia: </string>
    <string name="w_series">Serie:</string>
    <string name="w_label">Plan na dzień </string>
    <string name="latitude">Szerokość: </string>
    <string name="longitude">Długość: </string>
    <string name="address">Adres:</string>
    <string name="city">Miasto: </string>
    <string name="state">Województwo:</string>
    <string name="country">Kraj:</string>
    <string name="postal_code">Kod pocztowy:</string>

</resources>
