<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pl.edu.pb.wi.projekt.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="pl.edu.pb.wi.projekt.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/calendar_fragment" />

    <fragment
        android:id="@+id/navigation_steps"
        android:name="pl.edu.pb.wi.projekt.ui.step.StepsFragment"
        android:label="@string/title_daily_steps"
        tools:layout="@layout/steps_fragment" />
</navigation>