<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/standard_padding_20"
    android:layout_marginTop="@dimen/standard_padding_10"
    android:layout_marginRight="@dimen/standard_padding_20"
    android:layout_marginBottom="@dimen/standard_padding_10"
    card_view:cardBackgroundColor="@color/semi_transparent_white"
    card_view:cardCornerRadius="@dimen/card_radius1"
    card_view:cardElevation="@dimen/card_elevation"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/standard_padding_30">

        <LinearLayout
            android:id="@+id/box_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/padding_labels"
                android:text="@string/label_wname"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/workout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/label_name"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/box_reps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/box_name"
            android:gravity="center">

            <TextView
                android:id="@+id/label_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/workout_name"
                android:paddingEnd="@dimen/padding_labels"
                android:text="@string/label_wseries"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/workout_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/workout_name"
                android:layout_toEndOf="@id/label_series"
                android:textAppearance="?attr/textAppearanceListItem" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/box_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/box_reps"
            android:gravity="center">

            <TextView
                android:id="@+id/label_reps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/padding_labels"
                android:text="@string/label_wreps"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/workout_reps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/label_reps"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>